--- a/client/src/app/birthday-congratulation/birthday-congratulation.component.sass
+++ b/client/src/app/birthday-congratulation/birthday-congratulation.component.sass
@@ -26,12 +26,16 @@
   justify-content: space-around
 
 img
+  padding-top: 20px
   width: 200px
   height: 100px
 
 
 mat-form-field
   width: 400px
+
+#image
+  display: none
 
 
 
