--- a/client/src/app/main/main.component.sass
+++ b/client/src/app/main/main.component.sass
@@ -46,7 +46,12 @@ h1.app-name
   color: #673ab7
   font-weight: 600
 
+.mat-list-item.disabled
+  pointer-events: none
+  cursor: not-allowed
+  color: rgba(0,0,0,.32)
+
 .logged-in-message
   margin-right: 20px
-  font-size: 80%
-  font-weight: 50
+  font-size: 16px
+  font-weight: 100
