--- a/client/src/app/waybills/waybill-list/waybill-list.component.html
+++ b/client/src/app/waybills/waybill-list/waybill-list.component.html
@@ -15,9 +15,9 @@
       <mat-cell *matCellDef="let waybill">{{waybill.car.name}} {{waybill.car.number}}</mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="invoice_id">
+    <ng-container matColumnDef="invoice_number">
       <mat-header-cell *matHeaderCellDef>Invoice number</mat-header-cell>
-      <mat-cell *matCellDef="let waybill">{{waybill.invoiceId}}</mat-cell>
+      <mat-cell *matCellDef="let waybill">{{waybill.invoiceNumber}}</mat-cell>
     </ng-container>
 
     <ng-container matColumnDef="issue_date">
