--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -5,7 +5,7 @@
       <span>{{title}}<span class="title-separator" *ngIf="subtitle">&#x2500;</span>{{subtitle}}</span>
     </h1>
     <span class="toolbar-spacer"></span>
-    <div class="logged-in-message">Нi, {{user.firstName}}! You're logged in as {{user.roles}}</div>
+    <div class="logged-in-message">{{hiMessaage()}}</div>
     <button mat-icon-button matTooltip="Search">
       <mat-icon>search</mat-icon>
     </button>
@@ -21,7 +21,7 @@
   <mat-sidenav-container class="sidenav-container" [style.marginTop.px]="matches ? 56 : 0">
     <mat-sidenav #snav [mode]="matches ? 'over' : 'side'" [fixedInViewport]="matches" fixedTopGap="56" [opened]="!matches" [@flyInFromLeft]="'in'">
       <mat-nav-list>
-        <a mat-list-item [routerLink]="link.path" *ngFor="let link of navLinks" routerLinkActive="active">
+        <a mat-list-item [routerLink]="link.path" *ngFor="let link of navLinks" routerLinkActive="active" [class.disabled]="!link.availability">
           <span class="nav-item">{{link.label}}</span>
         </a>
       </mat-nav-list>
