improve styles and logic in client app

--- a/client/src/app/clients/client-detail/client-detail.component.sass
+++ b/client/src/app/clients/client-detail/client-detail.component.sass
@@ -1,19 +1,5 @@
+.card-header
+  margin: -24px
+  padding-right: 47px
+  margin-bottom: 10px
 
-$background-color--gray: #f7f7f7
-
-div .card-body
-  width: 800px
-  overflow: auto
-
-@media all and (min-width: 408px)
-  /deep/ .mat-tab-label
-    flex: 30%
-
-/deep/ .spinner-container
-  height: 390px
-  display: flex
-  justify-content: center
-  align-items: center
-
-div .user-details-header
-  background: $background-color--gray
