--- a/client/src/app/users/user-detail/user-detail.component.html
+++ b/client/src/app/users/user-detail/user-detail.component.html
@@ -1,6 +1,26 @@
 <div class="card-body">
-  <div mat-dialog-title class="user-details-header"><h3>User details</h3></div>
-  <div mat-dialog-content>
+  <div class="card-header">
+    <div class="header-sidebar-left">
+      <mat-icon mat-card-avatar class="card-header-icon">perm_contact_calendar
+      </mat-icon>
+    </div>
+    <div class="header-middle">
+      <span *ngIf="!user.id">New </span>
+      User
+      <div class="header-subtitle" *ngIf="user.id">
+        №{{user.id}}
+      </div>
+    </div>
+    
+    <div class="header-sidebar-right">
+      <button mat-icon-button matTooltip="Delete" (click)="deleteUser()" [mat-dialog-close]>
+        <mat-icon>delete</mat-icon>
+      </button>
+      <button mat-icon-button matTooltip="Close" [mat-dialog-close]>
+        <mat-icon>close</mat-icon>
+      </button>
+    </div>
+  </div>
   <form>
     <table cellspacing="0"><tr>
       <td><mat-form-field>
@@ -22,25 +42,6 @@
         <td><mat-form-field>
           <input matInput placeholder="Login" [(ngModel)]="data.user.login" name="login">
         </mat-form-field></td>
-        <td><mat-form-field>
-          <input matInput placeholder="Passport" [(ngModel)]="data.user.passport" name="passport">
-        </mat-form-field></td>
-      </tr></table>
-        
-      <table cellspacing="0"><tr>
-        <td><mat-form-field>
-          <input matInput placeholder="City" [(ngModel)]="data.user.city" name="city">
-        </mat-form-field></td>
-        <td><mat-form-field>
-          <input matInput [matDatepicker]="picker" placeholder="Birthday" [(ngModel)]="data.user.birthday" name="birthday">
-            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-            <mat-datepicker #picker></mat-datepicker>
-        </mat-form-field></td>
-        <td><mat-form-field>
-          <mat-select placeholder="Roles" [formControl]="roles" [(ngModel)]="data.user.roles" multiple>
-            <mat-option *ngFor="let roles of roleList" [value]="roles">{{roles}}</mat-option>
-          </mat-select>
-        </mat-form-field></td>
       </tr></table>
         
       <table cellspacing="0"><tr>
@@ -55,16 +56,37 @@
         </mat-form-field></td>
       </tr></table>
 
-      <mat-form-field>
-        <input matInput type="password" placeholder="Password" [(ngModel)]="data.user.password" name="password">
-        <button mat-button *ngIf="data.user.password" matSuffix mat-icon-button aria-label="Clear" (click)="data.user.password=''">
-          <mat-icon>close</mat-icon>
-        </button>
-      </mat-form-field>
+      <table cellspacing="0"><tr>
+        <td><mat-form-field>
+          <input matInput placeholder="City" [(ngModel)]="data.user.city" name="city">
+        </mat-form-field></td>
+        <td><mat-form-field>
+          <mat-select placeholder="Roles" [formControl]="roles" [(ngModel)]="data.user.roles" multiple>
+            <mat-option *ngFor="let roles of roleList" [value]="roles">{{roles}}</mat-option>
+          </mat-select>
+        </mat-form-field></td>
+        <td><mat-form-field>
+          <input matInput placeholder="Passport" [(ngModel)]="data.user.passport" name="passport">
+        </mat-form-field></td>
+      </tr></table>
+
+      <table cellspacing="0"><tr></tr>
+        <td><mat-form-field>
+          <input matInput type="password" placeholder="Password" [(ngModel)]="data.user.password" name="password">
+          <button mat-button *ngIf="data.user.password" matSuffix mat-icon-button aria-label="Clear" (click)="data.user.password=''">
+            <mat-icon>close</mat-icon>
+          </button>
+        </mat-form-field></td>
+        <td><mat-form-field>
+          <input matInput [matDatepicker]="picker" placeholder="Birthday" [(ngModel)]="data.user.birthday" name="birthday">
+            <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+            <mat-datepicker #picker></mat-datepicker>
+        </mat-form-field></td>
+      </table>
+
     </form>  
-  </div>  
   <div mat-dialog-actions>
-    <button mat-button color="primary" type="submit">CANCEL</button>
+    <button mat-button color="primary" type="submit" [mat-dialog-close]>CANCEL</button>
     <button mat-button color="primary" [mat-dialog-close]="data">APPLY</button>
   </div>
 </div>
