Add search feature to Invoices and Waybills. Bug fixes.

--- a/client/src/app/doc-holder/doc-holder.component.sass
+++ b/client/src/app/doc-holder/doc-holder.component.sass
@@ -6,7 +6,7 @@
 .mat-card--no-margin
   padding: 0
 
-/deep/ .card-body
+::ng-deep .card-body
   max-height: 400px
   overflow: auto
 
@@ -14,7 +14,7 @@
   /deep/ .mat-tab-label
     flex: 30%
 
-/deep/ .spinner-container
+::ng-deep .spinner-container
   height: 390px
   display: flex
   justify-content: center
