--- a/client/src/app/invoices/invoice-detail/invoice-detail.component.sass
+++ b/client/src/app/invoices/invoice-detail/invoice-detail.component.sass
@@ -79,7 +79,7 @@ hr
   max-width: 500px
   font-size: 13px
 
-  /deep/ .mat-form-field-infix
+  ::ng-deep .mat-form-field-infix
     width: 100%
 
   .add-remove-btn-row
