--- a/client/src/app/main/main.component.sass
+++ b/client/src/app/main/main.component.sass
@@ -55,3 +55,8 @@ h1.app-name
   margin-right: 20px
   font-size: 16px
   font-weight: 100
+  line-height: 20px
+
+app-search-bar
+  margin: 0 12px
+  //width: 20px
