--- a/client/src/app/invoices/lossact-detail/lossact-detail.component.sass
+++ b/client/src/app/invoices/lossact-detail/lossact-detail.component.sass
@@ -54,10 +54,9 @@ $line-color: rgba(0,0,0,.12)
 .container
   display: flex
   padding: 6px 0
-  //max-width: 500px
   font-size: 13px
 
-  /deep/ .mat-form-field-infix
+  ::ng-deep .mat-form-field-infix
     width: 100%
 
   .add-remove-btn-row
