--- a/client/src/app/waybills/waybill-detail/waybill-detail.component.sass
+++ b/client/src/app/waybills/waybill-detail/waybill-detail.component.sass
@@ -64,7 +64,7 @@ $line-color: rgba(0,0,0,.12)
   max-width: 500px
   font-size: 13px
 
-  /deep/ .mat-form-field-infix
+  ::ng-deep .mat-form-field-infix
     width: 100%
 
   .add-remove-btn-row
