--- a/client/src/app/warehouses/warehouse-list/warehouse-list.component.html
+++ b/client/src/app/warehouses/warehouse-list/warehouse-list.component.html
@@ -22,8 +22,12 @@
     </ng-container>
 
     <mat-header-row *matHeaderRowDef="displayedColumns"></mat-header-row>
-    <mat-row *matRowDef="let row; columns: displayedColumns;"></mat-row>
+    <mat-row *matRowDef="let row; columns: displayedColumns;" (click)="openWarehouseDetail(row.name, row)"></mat-row>
   </mat-table>
+
+  <button mat-fab color="accent" matTooltip="Add new note" class="add-fab-btn" (click)="openWarehouseDetail()">
+    <mat-icon>add</mat-icon>
+  </button>
 
   <mat-paginator class="paginator"
                  [length]="length"
