Changed image in UI. Now it always downloads from server.

--- a/client/src/app/birthday-congratulation/birthday-congratulation.component.html
+++ b/client/src/app/birthday-congratulation/birthday-congratulation.component.html
@@ -6,16 +6,18 @@
     <tr>
       <td id="header_with_iamge" [ngStyle]="{ 'background-color': letter.color } ">
         <label for="image">
-          <img [src]="fullImagePath">
+          <img [src]="[image]">
         </label>
         <input type="file" id="image" name="image" (click)="$event.stopPropagation()">
 
-          <mat-select id="color_selector" [ngStyle]="{'font-size': '10px'}" [(ngModel)]="letter.color">
-            <mat-option *ngFor="let color of colors" [ngStyle]="{ 'background-color': (color.name) } " [value]="color.name">
-            </mat-option>
-          </mat-select>
+        <mat-select id="color_selector" [ngStyle]="{'font-size': '10px'}" [(ngModel)]="letter.color">
+          <mat-option *ngFor="let color of colors" [ngStyle]="{ 'background-color': (color.name) } "
+                      [value]="color.name">
+          </mat-option>
+        </mat-select>
 
-      </td>`
+      </td>
+      `
 
     </tr>
 
@@ -38,8 +40,8 @@
 
 
 <mat-dialog-actions>
-  <button mat-button color="warn" mat-dialog-close (click)="cancel()">CANCEL</button>
-  <button mat-button color="primary" type="submit" (click)="setData()" >SAVE</button>
+  <button mat-button color="warn" mat-dialog-close>CANCEL</button>
+  <button mat-button color="primary" mat-dialog-close type="submit" (click)="setData()">SAVE</button>
 </mat-dialog-actions>
 
 
