--- a/client/src/app/birthday-congratulation/birthday-congratulation.component.sass
+++ b/client/src/app/birthday-congratulation/birthday-congratulation.component.sass
@@ -1,7 +1,4 @@
 
-
-
-
 .mat-dialog-content
   display: flex
   flex-direction: column
@@ -12,7 +9,7 @@
 
 .template_letter
   width: 400px
-  border: 1px solid black
+  border: 1px solid rgb(0, 0, 0.54)
   border-collapse: collapse
   background-color: #eaeaea
 
@@ -29,7 +26,6 @@ img
   padding-top: 20px
   width: 200px
   height: 100px
-
 
 mat-form-field
   width: 400px
