update client app with 'warehouse-search feature'

--- a/client/src/app/main/main.component.html
+++ b/client/src/app/main/main.component.html
@@ -6,7 +6,8 @@
     </h1>
     <span class="toolbar-spacer"></span>
     <span class="logged-in-message" *ngIf="showHiMsg">{{hiMessage()}}</span>
-    <button mat-icon-button matTooltip="Search" (click)="openCloseSearch()" *ngIf="path === 'invoices' || path === 'waybills'">
+    <button mat-icon-button matTooltip="Search" (click)="openCloseSearch()"
+     *ngIf="path === 'invoices' || path === 'waybills' || path === 'warehouses'">
       <mat-icon>search</mat-icon>
     </button>
     <app-search-bar [path]="path" *ngIf="isSearchOpen" [@slideOut]></app-search-bar>
