--- a/client/src/app/main/search-bar/search-bar.component.html
+++ b/client/src/app/main/search-bar/search-bar.component.html
@@ -1,4 +1,5 @@
 <div [ngSwitch]="path">
   <app-invoice-search *ngSwitchCase="'invoices'" [@opacityOut]></app-invoice-search>
   <app-waybill-search *ngSwitchCase="'waybills'" [@opacityOut]></app-waybill-search>
+  <app-warehouse-search *ngSwitchCase="'warehouses'" [@opacityOut]></app-warehouse-search>
 </div>
