Small fixes. Added schedule. Added static resource for inserting image, when we don't have the same in Database.

--- a/client/src/app/birthday-congratulation/birthday-congratulation.component.html
+++ b/client/src/app/birthday-congratulation/birthday-congratulation.component.html
@@ -32,10 +32,10 @@
     </tr>
   </table>
 
-  <div class="tags_buttons">
-    <button mat-button (click)="insertName()">Name</button>
-    <button mat-button (click)="insertAge()">Age</button>
-  </div>
+  <!--<div class="tags_buttons">-->
+    <!--<button mat-button (click)="insertName()">Name</button>-->
+    <!--<button mat-button (click)="insertAge()">Age</button>-->
+  <!--</div>-->
 
 </mat-dialog-content>
 
