Add ability to download report Excel file.

--- a/client/src/app/report/profit-loss-statement/profit-loss-statement.component.html
+++ b/client/src/app/report/profit-loss-statement/profit-loss-statement.component.html
@@ -28,6 +28,9 @@
           <mat-radio-button value="pie" align="end">Bar</mat-radio-button>
         </mat-radio-group>
       </div>
+      <div>
+        <button mat-raised-button color="primary" (click)="downloadReport()">.xlsx <mat-icon>file_download</mat-icon></button>
+      </div>
     </form>
   </div>
 </div>
