--- a/client/src/app/users/user-detail/user-detail.component.html
+++ b/client/src/app/users/user-detail/user-detail.component.html
@@ -13,10 +13,10 @@
     </div>
     
     <div class="header-sidebar-right">
-      <button mat-icon-button matTooltip="Delete" (click)="deleteUser()" [mat-dialog-close]>
+      <button mat-icon-button matTooltip="Delete" (click)="deleteUser()" [mat-dialog-close] tabindex="-1">
         <mat-icon>delete</mat-icon>
       </button>
-      <button mat-icon-button matTooltip="Close" [mat-dialog-close]>
+      <button mat-icon-button matTooltip="Close" [mat-dialog-close] tabindex="-1">
         <mat-icon>close</mat-icon>
       </button>
     </div>
