--- a/client/src/styles.sass
+++ b/client/src/styles.sass
@@ -6,7 +6,7 @@ body
   font-weight: 400
   line-height: 20px
   margin: 0
-  //background: #673ab7
+  background: #ffd740
 
 .card-header
   height: 72px
